--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = "1.0"
 actix-web = "3.3"
 reqwest = { version = "0.11.20", features = ["json", "blocking"] }
 base64 = "0.21.4"
+tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
